== In progress
 * Auto redirection limit
 * Cookie support
 * 304/ETag response caching
 
== Current
 * Added redirect follow support for GET requests
 
== 0.0.8
 * Added URI extension using the [] method (see examples/delicious.rb)
 * Refactored out Request as the first step to adding Response caching
 
 