@@ -5,7 +5,8 @@
  
 == Current
  * Added redirect follow support for GET requests
- 
+ * Request timeout limit config
+  
 == 0.0.8
  * Added URI extension using the [] method (see examples/delicious.rb)
  * Refactored out Request as the first step to adding Response caching
